# holoswarm-client

./: .gitignore  README.md  pyproject.toml  user_layout.ini
config/: default_layout.ini  settings.json
cuzk/: client.py
data/: mission.py  monitoring.py  session.py
gui/: start.py
gui/explorer/: window.py
gui/explorer/items/: waypoints.py
gui/listeners/: feedback.py  telemetry.py
gui/map/: controller.py  model.py  window.py
gui/map/handlers/: map_grid.py  primitives.py
gui/map/views/: waypoint.py
gui/mission/: window.py
gui/uav/: window.py
iroc/: client.py
rviz/: compose.yaml  down.sh  stack.env  up.sh
rviz/config_one/: rviz.rviz
rviz/config_two/: rviz.rviz
src/holoswarm_client/: __main__.py  app.py
src/holoswarm_client/cuzk/: client.py
src/holoswarm_client/data/: mission.py  monitoring.py  session.py
src/holoswarm_client/gui/explorer/: window.py
src/holoswarm_client/gui/explorer/items/: waypoints.py
src/holoswarm_client/gui/listeners/: feedback.py  telemetry.py
src/holoswarm_client/gui/map/: controller.py  model.py  window.py
src/holoswarm_client/gui/map/handlers/: map_grid.py  primitives.py
src/holoswarm_client/gui/mission/: window.py
src/holoswarm_client/gui/uav/: window.py
test/: get.sh  post.sh  test.sh
test/json/: hover.json  land_home.json  mission_pause.json  set_border.json  set_obstacle.json  set_origin.json  set_path.json  takeoff.json
test/json/missions/: autonomy_test.json  coverage.json  coverage_teme.json  heading.json  one_drone.json  sequential_subtask.json  test.json  two_drones.json  waypoint.json
(+2 files in other folders)
