[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "holoswarm_client"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "dearpygui",
  "screeninfo",
  "httpx",
  "websockets",
  "pyproj",
  "Pillow",
  "numpy"
]

[project.scripts]
holoswarm-client = "holoswarm_client.app:main"

[tool.setuptools.packages.find]
where = ["src"]
